--- a/BlockChain/README.adoc
+++ b/BlockChain/README.adoc
@@ -29,7 +29,7 @@
 ```c
 K(public key) = k(pvt key) * G(constant)
 K --> |SHA256| --256bit--> |RIPEMD160| --> 160bit(Address)
-160bit(Address) --> |Encode(Base58 Check)| --> Bitcoin Address
+160bit(Address) --> |Encode(Base58 Check)| --> Bitcoin Address      //Base58-Check(RIPEMD160(SHA256(K)))
 ```
 
 ==== Base58, Base58-Check Encoding
@@ -44,44 +44,35 @@ K --> |SHA256| --256bit--> |RIPEMD160| --> 160bit(Address)
 * Decoding software will calculate the checksum of the data and compare it to the checksum included in the code.
 
 ====== C++ Code (Generate Base64Check address)
-* <<keys, Private key in blockchain is random number between (1- 2^256^)>>
+* 1. <<keys, Private key in blockchain is random number between (1- 2^256^)>>
+* 2. <<key, Public key = (pvt key) x G>>
+* 3. <<address, Address of node = Base58-Check(RIPEMD160(SHA256(K)))>>
 ```cpp
 #include <bitcoin/bitcoin.hpp>
 int main() {
    // 1. Take a random Private secret key.
    bc::ec_secret secret = bc::decode_hash("038109007313a5807b2eccc082c8c3fbb988a973cacf1a7df9ce725c31b14776");
 
-   // 2. Get public key.
+   // 2. Public key = private key * G
    bc::ec_point public_key = bc::secret_to_public_key(secret);
    std::cout << "Public key: " << bc::encode_hex(public_key) << std::endl;
 
- // Create Bitcoin address.
- // Normally you can use:
- // bc::payment_address payaddr;
- // bc::set_public_key(payaddr, public_key);
- // const std::string address = payaddr.encoded();
- // Compute hash of public key for P2PKH address.
- const bc::short_hash hash = bc::bitcoin_short_hash(public_key);
- bc::data_chunk unencoded_address;
- // Reserve 25 bytes
- // [ version:1 ]
- // [ hash:20 ]
- // [ checksum:4 ]
- unencoded_address.reserve(25);
- // Version byte, 0 is normal BTC address (P2PKH).
- unencoded_address.push_back(0);
-Bitcoin Addresses | 75
- // Hash data
- bc::extend_data(unencoded_address, hash);
- // Checksum is computed by hashing data, and adding 4 bytes from hash.
- bc::append_checksum(unencoded_address);
- // Finally we must encode the result in Bitcoin's base58 encoding
- assert(unencoded_address.size() == 25);
- const std::string address = bc::encode_base58(unencoded_address);
- std::cout << "Address: " << address << std::endl;
- return 0;
+   // 3. Get Bitcoin address/Node address = Base58-Check(RIPEMD160(SHA256(K)))
+   const bc::short_hash hash = bc::bitcoin_short_hash(public_key);
+   bc::data_chunk unencoded_address;
+ 
+   // 4. Reserve 25 bytes: (version:1)(hash:20)(checksum:4)
+   unencoded_address.reserve(25);
+   unencoded_address.push_back(0);              // Version byte, 0 is normal BTC address (P2PKH)
+   bc::extend_data(unencoded_address, hash);    // Hash data
+   bc::append_checksum(unencoded_address);      // Checksum is computed by hashing data, and adding 4 bytes from hash.
+ 
+   // 5. Encode the result in Bitcoin's base58 encoding
+   assert(unencoded_address.size() == 25);
+   const std::string address = bc::encode_base58(unencoded_address);
+   std::cout << "Address: " << address << std::endl;
+   return 0;
 }
-
 ```
 
 ==== Block
