--- a/BlockChain/README.adoc
+++ b/BlockChain/README.adoc
@@ -129,7 +129,9 @@ Transaction
 * The work done by <<mining, miner(ie mining)>> to solve the puzzle is called POW.
 * Miner who solves the puzzle is rewarded some bitcoins and transaction fee.
 * *Problems with POW:*
-** 1. Miners compete to solve complex mathematical puzzles using computational power, More power more chances to solve 1st, this means more bitcoins goes with people/companies who own huge machines.
+** _1. Energy efficiency:_ Miners compete to solve complex mathematical puzzles using huge computational power.
+** _2. Centralization Concerns:_ More power more chances to solve 1st, this means more bitcoins goes with people/companies who own huge machines.
+** _3. Accessibility:_ Only those having specialized mining hardware, have more bitcoins.
 
 ==== Smart Contracts
 * These are the programs that run on blockchain having business logic.
