--- a/System-Design/Concepts/Terms/Consensus/README.adoc
+++ b/System-Design/Concepts/Terms/Consensus/README.adoc
@@ -11,11 +11,19 @@ when a certain number of messages are received, then an agreement is reached
 ==== 2. Proof Based /  leader-based / the Nakamoto consensus
 Nodes to compete for the leader-election lottery and the node that wins it proposes a final value
 
-===== link:BlockChain/README.adoc[1. POW(Proof of Work)]
+===== link:/BlockChain/README.adoc#pow[1. POW(Proof of Work) bitcoin uses it]
 
-===== 2. POS(Proof of Stake)
-* Relies on idea that a node or user has enough stake in the system; for example the user has invested enough in the system.
-* Eg: Ethereum uses it.
+===== 2. POS(Proof of Stake) (Ethereum uses it)
+* *Why POS came in?* Due to link:/BlockChain/README.adoc#pow[problems in POW(Proof of Work)], POS emerged.
+* *How POS Works?*
+** 1. Validators/forgers/stakers(same as <</BlockChain/README.adoc#mining, miners in POW system>>) validate transactions based on:
+*** a. Number of coins they hold
+*** b. And how many coins they are willing to "stake" as collateral.
+** 2. Validators are selected in a deterministic manner, often based on factors like the amount of coins staked and the length of time they've been staking.
+** 3. Validators are incentivized to act honestly because they have "their coins" – if they validate fraudulent transactions, they risk losing their staked coins.
+** 4. Validators are rewarded with transaction fees and sometimes a portion of the transaction fees paid by users.
+* *Advantages of POS:*
+** _1. Less power consumption wrt <</BlockChain/README.adoc#pow, POW system>>:_ The need for solving computational puzzles is eliminated, which significantly reduces energy consumption compared to PoW.
 
 === Situations where consensus is needed
 ==== 1. Leader Election
