--- a/BlockChain/README.adoc
+++ b/BlockChain/README.adoc
@@ -1,11 +1,12 @@
 :toc:
 :toclevels: 5   // Set the desired depth of the table of contents
 
+[[blockcha]]
 === Blockchain
 * This is append-only, immutable distributed ledger that is updateable only via consensus/agreement among peers. There is no single authority of this ledger.
 * This is link:(/Networking/OSI-Layers/Layer-7/P2P_OverlayNetwork/)[Peer to Peer] network running over TCP. Same as HTTP,FTP over TCP
 * *Examples blockchains*
-** _Tezos:_ Uses Proof of Stake
+** _Tezos:_ Uses <<pos, Proof of Stake>>
 ** _Bitcoin:_ Use <<pow, Proof of Work>>
 
 === Why to learn blockchain
@@ -92,12 +93,20 @@ struct block {
 }
 ```
 
-==== Electrum
-* This is Bitcoin client which allows to interact with the Bitcoin network(bitcoin network is blockchain). With client we can send and receive transactions, and manage your Bitcoin holdings.
+==== BlockChain Clients
 * There are two main types of Bitcoin clients:
 ** *1. Full Node:* These clients download and validate the entire Bitcoin blockchain
 ** *2. Lightweight Node:* These clients do not download the entire blockchain. Instead, they rely on full nodes to verify transactions for them. Examples:
+
+===== 1. Bitcoin Core (Fullnode Bitcoin client)
+Holds complete blockchain in local system. Requires ~500GB of space.
+
+===== 2. Electrum (Lightweight Bitcoin client)
+* It allows to interact with the Bitcoin network(bitcoin network is blockchain). With client we can send and receive transactions, and manage your Bitcoin holdings.
 *** Mycelium, Electrum, Exodus
+
+===== 3. Kukai (Lightweight Tezos client)
+* This is wallet service on <<blockcha, Tezos blockchain>>. Tezos is based on link:/System-Design/Concepts/Terms/Consensus/README.adoc#2-posproof-of-stake-ethereum-uses-it[Proof of stake], while Bitcoin core, electrum are <<pow, Proof of work blockchains>>
 
 ==== Ethereum
 Framework/platform for creating smart contracts. Etherum runs solidity programming language.
