Update and rename README.md to README.adoc

--- a/System-Design/Concepts/git/README.adoc
+++ b/System-Design/Concepts/git/README.adoc
@@ -1,43 +1,7 @@
-**Versioning Control**
-- [git vs gerrit](#vs)
-- [How git works](#how)
-- **Terms**
-  - [Branch: feature, master](#b)
-  - [Central repository(upstream)](#u)
-  - [Clone](#c)
-  - [Fork](#f)
-  - [HEAD, Detached HEAD](#h)
-  - [origin](#o)
-  - [master](#mas)
-  - [remote](#re)
-- **Commands**
-  - [add](#add)
-  - [checkout](#co)
-  - [cherry pick](#cp)
-  - [clone](#clone)
-  - [commit](#com)
-  - [delete](#del)
-  - [diff](#diff)
-  - [log](#log)
-  - [show](#sh)
-  - [stash](#st)
-  - [merge](#mr)
-  - [push](#push)
-  - [pull](#pull)
-  - [rebase](#rebase)
-  - [status](#st)
-  - [Split pull request](#spl)
-  - [sync with upstream](#sync)
-- **Issues**
-  - [submit including parent](#sp)
-  - [Remove commit after push](#rcap)
-  - [Remote head refers to nonexistent ref](#rem)
-  - [Merge Conflict](#mer)
-  - [Source branch is 12 commits behind target branch](#cb)
-- [**Actions**](#ac)
+:toc:
+:toclevels: 6
 
-<a name=vs></a>
-### git vs gerrit
+=== git vs gerrit
 ```c
                        | github/gitlab/bitbucket | gerrit 
 -----------------------|-------------------------|--------------
@@ -48,8 +12,7 @@ git history            |    not clean            |  cleaner
 Permissions            |    not extensive        | Much fine grained
 ```
 
-<a name=how></a>
-### How git works
+=== How git works
 ```c
 <---------- My-PC ----------->
 Working-Dir       Staging-Area         Committed-files         Remote-Repo
@@ -62,37 +25,31 @@ git status
          <-------- git merge ---------------
 ```
 
-## Terms
-<a name=b></a>
-### Branching
+=== Terms
+==== Branching
 - Developers can work on branch of repo for (bug fixing, new features). By working on branch, master branch is not affected.
 - **master branch:** generally represents the stable version of your code, which is released or published
 
-<a name=u></a>
-### Central repository(upstream)
-Organization's copy. Production Copy
+==== Central repository(upstream)Organization's copy. Production Copy
 
-<a name=c></a>
-### Clone
+==== Clone
 Making a local copy of code on your machine 
 
-<a name=f></a>
-### Fork 
+=== Fork
 Own duplicated copy of someone else's code. user1 created a repo. User2 wants a local copy of repo. user2 forks the repo. How to Fork?    
-  - Login github > Search for repos > Click Fork.
-  - Now under Your Profile you can see the forked repo. git clone it. Changes would not be reflected onto master branch
+* Login github > Search for repos > Click Fork.
+* Now under Your Profile you can see the forked repo. git clone it. Changes would not be reflected onto master branch
 
-<a name=h></a>
-### Head
-- HEΑD is a pointer, which alwαys points to the latest commit in the brαnch. Whenever we make a commit head point to latest commit. Head is stored in 
+=== Head
+* HEΑD is a pointer, which alwαys points to the latest commit in the brαnch. Whenever we make a commit head point to latest commit. Head is stored in 
 ```c
 $ cαt .git/refs/heαds/mαster
 570837e7d58fα4bccd86cb575d884502188b0c49
 ```
-#### Detached Head
-  - We checkedout a commit and its detached, ie we can do the changes, play around will not affect on git, since its not attached to any branch.
-  - We can think detached head as Branch without name.
-  - *How to Detach Head?* A situation where we have checked out a commit-id(instead of a branch), THIS means we want commit not branch.
+==== Detached Head
+* We checkedout a commit and its detached, ie we can do the changes, play around will not affect on git, since its not attached to any branch.
+* We can think detached head as Branch without name.
+* *How to Detach Head?* A situation where we have checked out a commit-id(instead of a branch), THIS means we want commit not branch.
 ```console
 $ git clone https://github.com/amitkumar50/test-repo/
 $ git checkout 4cd80c97557dca56192d7448c800850fbdb7d412             //Checkout commit. Usually we do  $ git checkout branch
@@ -119,30 +76,26 @@ $ git diff
 +       println!("There");
  }
  ```
-- **.git/HEAD?** Stores commit-id of most recent/latest commit on the branch.
-- **Master/Trunk/Main/Head Branch:** Main branch (as of tree). Like trunk of tree. 
+* *.git/HEAD?* Stores commit-id of most recent/latest commit on the branch.
+* *Master/Trunk/Main/Head Branch:* Main branch (as of tree). Like trunk of tree. 
   - _upstream/master:_    Master branch of upstream
   - _Other Branches:_ These are like twigs of trunk. Finally trunk is main branch which keeps on going up    
     - Origin: Your fork from original/upstream
 
-<a name=o></a>
-#### origin
-- "origin" is a shorthand name for the remote repository that a project was originally cloned from.
+==== origin
+* "origin" is a shorthand name for the remote repository that a project was originally cloned from.
 ```c
 $ git clone https://github.com/amitkumar50/test-repo    //origin=https://github.com/amitkumar50/test-repo
 ```
 
-<a name=mas></a>
-#### master
-- master is name of branch on remote repository.
+==== master
+* master is name of branch on remote repository.
 
-<a name=re></a>
-#### remote 
+==== remote 
 
 
-## Commands
-<a name=rev></a>
-### Working on Review Comments
+=== Commands
+==== Working on Review Comments
 ```c
 Open git bash
 $ git clone; cd code
@@ -162,23 +115,20 @@ $ gitdir=<>
 $ git push <complete command> topic=<should-be-same-as-prev>
 ```
 
-<a name=add></a>
-#### add
+==== add
 This adds files onto staging area, ie in-between cache
 ```c
 Working Directory --------------> Staging Area  --------------------> git repository
                     git add a.c                   git commit -m ""
 ```
 
-<a name=co></a>
-#### checkout
+==== checkout
 ```c
   git checkout <branch>           //1. Work on older branch
   git checkout -b <branch>        //2. Creating a new branch
 ```
 
-<a name=cp></a>
-#### Cherry pick
+==== Cherry pick
 Means choose commit from 1 branch and apply to other branch. Ex: cherry pick changes from branch1 to master
 ```c
 $ git checkout test                               //Move to target branch where you want apply
@@ -189,8 +139,7 @@ Yout branch is a head of 'origin/master' by 1 commit
 gerrit$ git push <>
 ```
 
-<a name=clone></a>
-#### clone
+==== clone
 Used to create a clone/copy of the target repository.
 ```c
 # git config --global url "ssh://gerritgitmaster/".pushInsteadof "ssh://gerritgit/"
@@ -223,8 +172,7 @@ Host gerritgitmaster        //This is master server.
 $ git clone ssh://gerritgit-mirror/repo-name
 ```
 
-<a name=com></a>
-#### commit
+==== commit
 Move from [staging area](#add) to git repo
 ```c
   # git rev-list -n 1 sssd-1_16_4_21      //finding commit-id of version
@@ -233,22 +181,19 @@ Move from [staging area](#add) to git repo
   # git push origin branch -f     //Changing commit message
 ```
 
-<a name=del></a>
-#### delete
+==== delete
 ```c
 $ git branch -d <branch-name>
 ```
 
-<a name=diff></a>
-#### diff
+==== diff
 ```c
 $ git diff --output file        //Output in file
 ```
-#### fetch
+==== fetch
 Download objects and refs from another repository
 
-<a name=log></a>
-#### log    
+==== log    
 Shows commit logs.
 ```c
   # git log --graph
@@ -256,12 +201,10 @@ Shows commit logs.
   # git log --since='<date>' --until='<date>' --pretty=oneline --grep openldap     //Look for commits between dates
   # git log commit-id-1 commit-id-2  --pretty=oneline                              //Look for commits between commit-ids
 ```
-<a name=mr></a>
-#### merge
+==== merge
 Merge 2 or more development histories together.
 
-<a name=push></a>
-#### push
+==== push
 - [origin](#o), [master](#mas)
 ```c
 $ git add test.c
@@ -270,26 +213,22 @@ $ git push origin branch1         //Push changes on branch1
 $ git push origin master         //Push changes on master
 ```
 
-<a name=pull></a>
-#### pull
+==== pull
 Synching with latest branch code
 
-<a name=rebase></a>
-#### rebase
+==== rebase
 Reapply commits on top of another base tip. When we have merge conflicts we do
 ```c
 # git rebase master
 ```
 
-<a name=sh></a>
-#### show
+==== show
 To see code changes that particular commit did
 ```c
   # git show commit
 ```
 
-<a name=st></a>
-#### stash
+==== stash
 - Dictionary meaning: store (something) safely.
 - _Example:_ You are working on change and customer esclation comes. Now you need to work on customer issue but you cannot drop your existing code. Stash it.
 - git stash temporarily saves changes you've made to your working copy so you can work on something else, and then come back and re-apply them later on.
@@ -318,12 +257,10 @@ $ git commit -m 'test'
 $ git push origin master
 ```
 
-<a name=st></a>
-#### status
+==== status
 tells what's modified by you, what's not modified on local repo
 
-<a name=spl></a>
-#### [Split pull request]https://www.youtube.com/watch?v=e26Zx9K3cdQ)
+==== [Split pull request]https://www.youtube.com/watch?v=e26Zx9K3cdQ)
 ```c
 $ git clone repo
 
@@ -366,21 +303,18 @@ $ git log --oneline                                //Now 2 seperate commits
 3939039 (origin/main, origin/HEAD) initial commit
 ```
 
-<a name=sync></a>
-#### sync with upstream
+==== sync with upstream
 ```c
 # git fetch origin                           # Updates origin/master
 # git rebase origin/master            # Rebases current branch onto origin/master
 ```
 
-## Issues
-<a name=mer></a>
-#### Merge Conflict
+=== Issues
+==== Merge Conflict
 - _1._ Use rebase button on gerrit UI to resolve merge conflict.
 - _2._ If you want to make changes in PR.
 
-<a name=rcap></a>
-#### Remove commit after push
+==== Remove commit after push
 ```c
 $ git clone
 $ git checkout branch
@@ -393,8 +327,7 @@ $ git commit -m "Reverting 2 commits"
 $ git push ssh://amit@git:<path> HEAD:refs/for/master,r=reviwer-1,r=reviewer-2
 ```
 
-<a name=rem></a>
-#### Remote head refers to nonexistent ref
+==== Remote head refers to nonexistent ref
 - Head(.git/HEAD) is a file storing reference to checkout branch
 - ref: ref is a file storing hash of recent commit on checkout branch
 - This error means:HEAD exists, but ref(File storing SHA-1 of recent commit on remote branch) is missing
@@ -410,13 +343,11 @@ test-repo$ cat .git/refs/heads/master       <<ref does not exist
 test-repo$
 ```
 
-<a name=sb></a>
-#### submit including parent
+==== submit including parent
 - _Why?_ When parent of this commit is abandoned.
 - _Solution:_ Close, Open New.
 
-<a name=cb></a>
-#### Source branch is 12 commits behind target branch
+==== Source branch is 12 commits behind target branch
 ```c
   source=amit_sdc                 target=master_sdc
   
@@ -433,13 +364,12 @@ amit_sdc
 $ git push origin amit_sdc
 ```
 
-<a name=ac></a>
-## Actions
-- Everytime some event happens to your repository on github a action is initiated
-  - Events can be: PR created, PR merged, Issue created, contributor joines etc
-- Action is single task. We can combine actions to create jobs and a custom workflow.
-- **Custom Action?** We can write custom code(action) which can interact with github repository and perform tasks.
+=== Actions
+* Everytime some event happens to your repository on github a action is initiated
+** Events can be: PR created, PR merged, Issue created, contributor joines etc
+* Action is single task. We can combine actions to create jobs and a custom workflow.
+* *Custom Action?* We can write custom code(action) which can interact with github repository and perform tasks.
 
-### Types of Actions
-#### 1. Docker container Action
-#### 2. Javascript Action
+==== Types of Actions
+===== 1. Docker container Action
+===== 2. Javascript Action
